# briar-gtk

./: .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  CONTRIBUTING.md  LICENSE.md  README.md  TRANSLATION.md  app.briar.gtk.json  app.briar.gtk.yaml  code-of-conduct.md  meson.build  nl.po  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
.tx/: config
briar-gtk/: briar-gtk.in  meson.build
briar-gtk/briar_gtk/: __init__.py  application.py  container.py  define.py  notification_handler.py  toolbar.py  utils.py  window.py
briar-gtk/briar_gtk/actions/: __init__.py  actions.py  add_contact.py  application.py  login.py  prefixes.py  registration.py  window.py
briar-gtk/briar_gtk/add_contact/: __init__.py  add_contact_actions.py  add_contact_view.py
briar-gtk/briar_gtk/containers/: __init__.py  add_contact.py  chat.py  login.py  main.py  main_window.py  private_chat.py  registration.py  startup.py
briar-gtk/briar_gtk/controllers/: __init__.py  chat_menu.py  main_menu.py  main_window.py  notification.py  private_chat.py  sidebar.py
briar-gtk/briar_gtk/conversation/: __init__.py  about_dialog.py  conversation_presenter.py  conversation_view.py
briar-gtk/briar_gtk/conversation_sidebar/: __init__.py  contact_row.py  conversation_sidebar_presenter.py  conversation_sidebar_view.py
briar-gtk/briar_gtk/handlers/: __init__.py  notification.py
briar-gtk/briar_gtk/presenters/: __init__.py  main_window.py  private_chat.py  sidebar.py
briar-gtk/briar_gtk/private_chat/: __init__.py  edit_dialog.py  private_chat_presenter.py  private_chat_view.py  private_message.py
briar-gtk/briar_gtk/startup/: __init__.py  login_actions.py  login_view.py  registration_actions.py  registration_view.py  startup_view.py
briar-gtk/briar_gtk/views/: __init__.py  add_contact.py  chat_menu.py  login.py  main_menu.py  main_window.py  private_chat.py  registration.py  sidebar.py  startup.py
briar-gtk/briar_gtk/widgets/: __init__.py  about_dialog.py  contact_row.py  edit_dialog.py  private_message.py  undo_notification.py
briar-gtk/data/: app.briar.gtk.appdata.xml.in  app.briar.gtk.desktop.in  app.briar.gtk.metainfo.xml.in  meson.build
briar-gtk/data/icons/: meson.build
briar-gtk/data/ui/: about_dialog.ui.in  add_contact.ui  app.briar.gtk.gresource.xml  app.briar.gtk.gschema.xml  application.css  chat.ui  chat_menu.ui  conversation.ui  login.ui  main.ui  main_menu.ui  main_window.ui  meson.build  private_chat.ui  registration.ui  toolbar_start.ui
briar-gtk/po/: LINGUAS  ar.po  ast.po  az.po  be.po  bg.po  bn.po  bo.po  br.po  briar-gtk.pot  bs.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  gl.po  he.po  hi.po  hu.po  ia.po  id.po  is.po  it.po  ja.po  ko.po  lt.po  meson.build  mk.po  ms.po  nb_NO.po  nl.po  oc.po  pl.po  (+17 more)
briar-gtk/po/briar-gtk/: LINGUAS  POTFILES  ar.po  ast.po  az.po  be.po  bg.po  bn.po  bo.po  br.po  briar-gtk.pot  bs.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  gl.po  he.po  hi.po  hu.po  ia.po  id.po  is.po  it.po  ja.po  ko.po  lt.po  meson.build  mk.po  ms.po  my.po  nb_NO.po  nl.po  (+20 more)
briar-gtk/po/briar-gtk-meta/: LINGUAS  ar.po  ast.po  az.po  be.po  bg.po  bn.po  bo.po  br.po  briar-gtk-meta.pot  bs.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  gl.po  he.po  hi.po  hu.po  ia.po  id.po  is.po  it.po  ja.po  ko.po  lt.po  meson.build  mk.po  ms.po  my.po  nb_NO.po  nl.po  oc.po  (+20 more)
briar-gtk/tests/: conftest.py
briar-gtk/tests/briar_gtk/: test_application.py  test_container.py  test_define.py  test_toolbar.py  test_window.py
data/: app.briar.gtk.appdata.xml.in  app.briar.gtk.desktop.in  app.briar.gtk.gschema.xml  meson.build
data/ui/: add_contact.ui  app.briar.gtk.gresource.xml  application.css  chat.ui  login.ui  main.ui  registration.ui  setup.ui  toolbar_start.ui
debian/: changelog  control  copyright  rules
flatpak/: python3-flit.json  python3-requests2.json  python3-websockets.json
po/: briar-gtk.pot  de.po  es.po  meson.build
res/: app.briar.gtk.appdata.xml.in  app.briar.gtk.desktop.in  meson.build
res/ui/: gresource.xml  setup.ui
src/: briar-gtk.gresource.xml  briar-gtk.in  briar_gtk.in  main.py  meson.build  meson_post_install.py  window.py  window.ui
src/briar/: briar.py
src/briar/api/: api.py  briar.py  constants.py  model.py
src/briar/api/models/: contacts.py  model.py  private_chat.py  socket_listener.py
src/briar/gtk/: application.py  container.py  define.py  logger.py  toolbar.py  window.py
src/briar/gtk/containers/: add_contact.py  chat.py  login.py  main.py  registration.py  startup.py
src/ui/: gi_composites.py  setup.py
tests/: conftest.py
tests/briar/api/: test_constants.py
tests/briar/api/models/: test_contacts.py  test_private_chat.py
tests/briar/gtk/: test_application.py  test_define.py  test_toolbar.py
tools/: copy-db-from-android.sh  generate-data.sh  generate-gresource.sh  generate_data.sh  release-briar-headless.sh  run-tests.sh  update-translations.sh
tools/flatpak/: app.briar.gtk.flatpakref  dorfbrunnen.flatpakrepo  release.sh
tools/tests/: test-pycodestyle.sh  test-pylint.sh  test-pytest.sh
